# Fully-Homomorphic-Encryption-Hands-on

./: .gitignore  README.md
FHE_Circuit_Debugger/: lazyarch.py  notebook.ipynb
Microsoft SEAL Examples/: My_BFV_1.cpp  My_Batch_Encoder.cpp
No-boots/: Cargo.toml
No-boots/sources/: arbitrary_shortint  server_key_mod
No-boots/src/: Boolean_main.rs  Boolean_main_1.rs  Boolean_main_2.rs  Experiments.md  ShortInt_1.rs  ShortInt_2.rs  ShortInt_3.rs  ShortInt_4.rs  ShortInt_main.rs  main.rs  main__.rs
PulpFHE-rs/: Cargo.toml
PulpFHE-rs - BACKUP/: Cargo.toml
PulpFHE-rs - BACKUP/src/: main.rs  processor_units.rs
PulpFHE-rs - BACKUP/src/processor_boolean/: test_processor_boolean_8.rs
PulpFHE-rs - BACKUP/store/: engine_mod.rs  processor_boolean.rs  processor_units.rs
PulpFHE-rs/src/: controller.rs  main.rs  pitch_trim_module.rs  processor.rs  processor_boolean.rs  processor_circuits.rs  processor_gates.rs  processor_units.rs  register_table.rs  reservation_stations.rs
PulpFHE-rs/src/controller/: test_controller_8.rs
PulpFHE-rs/src/processor_boolean/: test_processor_boolean_16.rs  test_processor_boolean_32.rs  test_processor_boolean_8.rs
PulpFHE-rs/store/: gate_vs_bootstrapping_benchmark  scratch.rs  server_key_mod.rs  test_processor_boolean_8.rs
ZAMA Numpy/: h-numpy.ipynb  main.py
ringSNARK/: example.cpp  example2.cpp
tfhe-example/: Cargo.toml
tfhe-example/src/: main_1
